fixed alignment of winery cards to be added

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -56,13 +56,13 @@ div.add-winery-card{
   width: 100%;
 }
 #wine-map-directions{
-  margin-top: 30px;
+  margin-top: 25px;
   overflow: auto;
   height: 400px;
   width: 250px;
-  border: solid 1px;
   border-radius: 25px;
   padding-left: 5px;
+  border: solid white 1px;
 }
 #wine-map{
   height: 300px;
@@ -73,7 +73,11 @@ div.add-winery-card{
   margin-right: auto;
   margin-top: 35px;
   border-radius: 25px;
-
+}
+.card-content{
+  height: 130px;
+  overflow: auto;
+}
 
   /* // TODO: SETUP @MEDIA SIZING FOR SMALLER WINDOWS TO MAKE MAP RESPONSIVE*/
 }
